Updated auth and reort
